dev_ws/log/build_2020-11-23_16-27-16/tallest_building/stderr.log
  File "H:\MyProgram\C and C++\ROS\dev_ws\install\Lib\site-packages\tallest_building\client_function.py", line 20
    break
    ^
SyntaxError: 'break' outside loop

